--- a/index.html
+++ b/index.html
@@ -2,38 +2,127 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flower paradise</title>
-    <link rel="shortcut icon" href="imagens/imagem.logo.png" type="imagem/x-icon">
+    <title>Flower paradise - Mais do que apenas flores, um so gnho!</title>
+    <link rel="shortcut icon" href="imagens/imagem.logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <section class="topo">
-        <h2>jogos</h2>
-        <section class="menubar">
-            <ul>
-                <a href=""><li>Página inial</li></a>
-                <a href="https://ff.garena.com/pt/"><li>Sobre</li></a>
-                <a href="https://github.com/Isabelly-Cristine"><li>Contato</li></a>
-                <a class="botão-secundario" href="https://www.ffesportsbr.com.br/"><li>esports</li></a>
-              
-            </ul>
+        <a href="index.html"><img src="images/favicon.svg" alt=""></a>
+        <ul>
+            <a href="index.html"><li>Ajuda</li></a>
+            <a href="#produtos"><li>Contatos</li></a>
+            <a href="#beneficios"><li>Delivery</li></a>
+            <a href="#sobre-nos"><li>Longin</li></a>
+            <a class="botao-primario" href="">Comprar agora</a>
+        </ul>
+    </section>
+
+    <section class="header">
+        <section class="esquerda">
+        <h1>Flower paradise!</h1>
+        <p>Plantas e Mudas das mais variadas espécies nacionais e exóticas</p>
+        <a class="botao-primario" href="">Leia mais</a>
+        </section>
+        <section class="direita">
+            <img src="imagens/imagem 1.png" alt="">
         </section>
     </section>
-    <section class= "corpo">
-    <section class="esquerda">
-        <p>garena free fire! </p>
-        <h1> free fire battle in style !
-        </h1>
-        <p>last news</p>
-        <a class="botao-primario">quero jogar!</a>
+
+    <section id="produtos">
+        <h2>Nossos produtos</h2>
+        <h3>Descubra uma variedade de flores e plantas!</h3>
+        <section class="produtos">
+            <section class="produto">
+                <img src="imagens/imagem 2.png" alt="">
+                <a class="botao-primario" href="">Buquê de flores</a>
+            </section>
+            <section class="produto">
+                <img src="imagens/imagem 3.png" alt="">
+                <a class="botao-primario" href="">box com flores</a>
+            </section>
+            <section class="produto">
+                <img src="imagens/imagem 4.png" alt="">
+                <a class="botao-primario" href="">Decorações com flores</a>
+            </section>
+        </section>
     </section>
-    <section class="direita">
-        <img src="games.png" alt="">
+    <section id="beneficios">
+        <h2>Benefícios</h2>
+        <section class="beneficios">
+            <section class="beneficio">
+                <section class="beneficio-titulo">
+                    <ion-icon name="checkmark-circle"></ion-icon>
+                    <h4>Entrega rapida.</h4>
+            </section>
+            <p>Receba suas flores no mesmo dia, para surpreender com rapideze e praticidade!</p>
+            </section>
+
+            <section class="beneficio">
+                <section class="beneficio-titulo">
+                    <ion-icon name="checkmark-circle"></ion-icon>
+                    <h4>Frete grátis.</h4>
+            </section>
+            <p>Desfrute da comodidade de nossos benefícios exclusivos para entregas no período comercial.</p>
+            </section>
+
+            <section class="beneficio">
+                <section class="beneficio-titulo">
+                    <ion-icon name="checkmark-circle"></ion-icon>
+                    <h4>Tudo em ate 3x sem juros.</h4>
+            </section>
+            <p>Facilidade de Pagamento: Aproveite a Comodidade e Flexibilidadede Nossas Opções.</p>
+            </section>
+        </section>
+        <a class="botao-primario" href="">Leia mais</a>
     </section>
-    
+
+    <section id="sobre-nos">
+        <section claspngs="esquerda">
+            <img src="imagens/imagem 5.png" alt="">
+        </section>
+        <section class="direita">
+            <h2>Sobre nós</h2>
+            <p>Somos a Flores Online, o primeiro e-commerce de flores do Brasil.Criamos e entregamos arranjos autoraiscom bom gosto, carinho e as flores mais frescas da estaçãopara ajudar as pessoas a cultivarem mais felicidade.</p>
+            <a class="botao-primario" href="">Leia mais</a>
+            </section>
     </section>
+
+    <footer>
+        <section class="marca">
+            <img src="imagens/imagem.logo.png" alt="">
+            <p>Flower paradise company.</p>
+        </section>
+        <section class="informacoes">
+            <h5>Informações</h5>
+            <ul>
+                <li>Contate-nos</li>
+                <li>Sobre nós</li>
+                <li>Blog</li>
+                <li>FAQs</li>
+            </ul>
+        </section>
+        <section class="empresa">
+            <h5>Empresa</h5>
+            <ul>
+                <li>Promoções</li>
+                <li>Carreiras</li>
+                <li>Termos e condições</li>
+                <li>Políticas de privacidade</li>
+            </ul>
+        </section>
+        <section class="contato">
+            <h5>Conecte-se conosco!</h5>
+            <section class="icons">
+                <a href=""><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
+                <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+            </section>
+        </section>
+    </footer>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>    
 </body>
 </html>
