--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="esquerda">
         <h1>Flower paradise!</h1>
         <p>Plantas e Mudas das mais variadas espécies nacionais e exóticas</p>
-        <a class="botao-primario" href="">Leia mais</a>
+        <a class="botao-primario" href="">Saiba mais</a>
         </section>
         <section class="direita">
             <img src="imagens/imagem 1.png" alt="">
@@ -84,8 +84,15 @@
         </section>
         <section class="direita">
             <h2>Sobre nós</h2>
-            <p>Somos a Flores Online, o primeiro e-commerce de flores do Brasil.Criamos e entregamos arranjos autoraiscom bom gosto, carinho e as flores mais frescas da estaçãopara ajudar as pessoas a cultivarem mais felicidade.</p>
-            <a class="botao-primario" href="">Leia mais</a>
+            <p>A Floricultura trabalha exclusivamente com flores naturais, e possui um variado mix em flores, cestas, chocolates artesanais, pelúcias, perfumaria e presentes criativos para todas as ocasiões.
+                <br><br>
+
+                Está localizada na Rua XXX, N xx loja 1, Passo das xxxx, em um ambiente agradável e moderno, oferecendo qualidade em seus produtos e um ótimo atendimento.
+                <br><br>
+                
+                Trabalha  com atendimento exclusivo via whats: (99) 990000000 e serviço de tele- entrega através do fone (99) 0000-0001.</p>
+                
+            <a class="botao-primario" href="">Saiba mais</a>
             </section>
     </section>
 
