--- a/index.html
+++ b/index.html
@@ -3,38 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flower paradise - Mais do que apenas flores, um so gnho!</title>
+    <title>Flower paradise! - Mais que apenas flores: um sonho!</title>
     <link rel="shortcut icon" href="imagens/imagem.logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="topo">
-        <a href="index.html"><img src="images/favicon.svg" alt="" /></a>
-        <nav class="menu-lateral">
-          <ion-icon
-                class="botao-menu-close"
-                name="close-outline"
-                onclick="toggleMenu()"></ion-icon>
-          <ul>
-              <a href="index.html"><li>Página inicial</li></a>
+        <a href="index.html"><img src="images/favicon.svg" alt=""></a>
+        <ul>
+            <a href="index.html"><li>Página inicial</li></a>
             <a href="#produtos"><li>Produtos</li></a>
-            <a href="#beneficios"><li>Benefícios</li></a>
-            <a href="#sobre-nos"><li>Sobre nós</li></a>
+            <a href="#beneficios"><li>delivery</li></a>
+            <a href="#sobre-nos"><li>Longin</li></a>
             <a class="botao-primario" href="">Comprar agora!</a>
-          </ul>
-        </nav>
-        <ion-icon
-          class="botao-menu"
-          name="menu-outline"
-          onclick="toggleMenu()"
-        ></ion-icon>
-      </section>
+        </ul>
+    </section>
 
     <section class="header">
         <section class="esquerda">
         <h1>Flower paradise!</h1>
-        <p>Plantas e Mudas das mais variadas espécies nacionais e exóticas</p>
-        <a class="botao-primario" href="">Saiba mais</a>
+        <p>ExPlantas e Mudas das mais variadas espécies nacionais e exóticas.</p>
+        <a class="botao-primario" href="">Comprar agora!</a>
         </section>
         <section class="direita">
             <img src="imagens/imagem 1.png" alt="">
@@ -43,19 +32,19 @@
 
     <section id="produtos">
         <h2>Nossos produtos</h2>
-        <h3>Descubra uma variedade de flores e plantas!</h3>
+        <h3>Descubra a excelência incomparável em cada detalhe.</h3>
         <section class="produtos">
             <section class="produto">
-                <img src="imagens/imagem 2.png" alt="">
-                <a class="botao-primario" href="">Buquê de flores</a>
+                <img src="images/produto-01.png" alt="">
+                <a class="botao-primario" href="">Comprar</a>
             </section>
             <section class="produto">
-                <img src="imagens/imagem 3.png" alt="">
-                <a class="botao-primario" href="">box com flores</a>
+                <img src="images/produto-02.png" alt="">
+                <a class="botao-primario" href="">Comprar</a>
             </section>
             <section class="produto">
-                <img src="imagens/imagem 4.png" alt="">
-                <a class="botao-primario" href="">Decorações com flores</a>
+                <img src="images/produto-03.png" alt="">
+                <a class="botao-primario" href="">Comprar</a>
             </section>
         </section>
     </section>
@@ -65,52 +54,49 @@
             <section class="beneficio">
                 <section class="beneficio-titulo">
                     <ion-icon name="checkmark-circle"></ion-icon>
-                    <h4>Entrega rapida.</h4>
+                    <h4>Áudio de qualidade</h4>
             </section>
-            <p>Receba suas flores no mesmo dia, para surpreender com rapideze e praticidade!</p>
-            </section>
-
-            <section class="beneficio">
-                <section class="beneficio-titulo">
-                    <ion-icon name="checkmark-circle"></ion-icon>
-                    <h4>Frete grátis.</h4>
-            </section>
-            <p>Desfrute da comodidade de nossos benefícios exclusivos para entregas no período comercial.</p>
+            <p>Com áudio computacional, criamos uma experiência sonora inovadora, que fazem você se sentir dentro da ação ao assistir a filmes.</p>
             </section>
 
             <section class="beneficio">
                 <section class="beneficio-titulo">
                     <ion-icon name="checkmark-circle"></ion-icon>
-                    <h4>Tudo em ate 3x sem juros.</h4>
+                    <h4>Design ergonômico</h4>
             </section>
-            <p>Facilidade de Pagamento: Aproveite a Comodidade e Flexibilidadede Nossas Opções.</p>
+            <p>Seu mecanismo revolucionário possibilita que cada fone se movimente de forma independente e equilibre a pressão.</p>
+            </section>
+
+            <section class="beneficio">
+                <section class="beneficio-titulo">
+                    <ion-icon name="checkmark-circle"></ion-icon>
+                    <h4>Ajuste impecável</h4>
+            </section>
+            <p>As almofadas criam uma vedação confortável e total, que é o primeiro passo para um som incrível.</p>
             </section>
         </section>
-        <a class="botao-primario" href="">Leia mais</a>
+        <a class="botao-primario" href="">Comprar agora!</a>
     </section>
 
     <section id="sobre-nos">
-        <section claspngs="esquerda">
-            <img src="imagens/imagem 5.png" alt="">
+        <section class="esquerda">
+            <img src="images/sobre-nos.png" alt="">
         </section>
         <section class="direita">
             <h2>Sobre nós</h2>
-            <p>A Floricultura trabalha exclusivamente com flores naturais, e possui um variado mix em flores, cestas, chocolates artesanais, pelúcias, perfumaria e presentes criativos para todas as ocasiões.
+            <p>Somos mais do que uma marca, somos uma paixão por inovação e excelência. No coração de nossa jornada está o compromisso com a criação de experiências excepcionais. Combinamos artesanato refinado com tecnologia de ponta para oferecer produtos que transcendem as expectativas.
                 <br><br>
-
-                Está localizada na Rua XXX, N xx loja 1, Passo das xxxx, em um ambiente agradável e moderno, oferecendo qualidade em seus produtos e um ótimo atendimento.
+                Nossa história tem dedicação à qualidade, à inspiração e à busca incessante pelo extraordinário. Convidamos você a se juntar a nós nessa jornada, onde cada detalhe conta e cada experiência é única.
                 <br><br>
-                
-                Trabalha  com atendimento exclusivo via whats: (99) 990000000 e serviço de tele- entrega através do fone (99) 0000-0001.</p>
-                
-            <a class="botao-primario" href="">Saiba mais</a>
+                Acreditamos que cada interação é uma oportunidade de construir conexões significativas. Nossa história é contada através dos sorrisos dos clientes satisfeitos, das inovações que moldam o futuro e das relações duradouras que construímos ao longo do caminho.</p>
+            <a class="botao-primario" href="">Comprar agora!</a>
             </section>
     </section>
 
     <footer>
         <section class="marca">
-            <img src="imagens/imagem.logo.png" alt="">
-            <p>Flower paradise company.</p>
+            <img src="images/logo.svg" alt="">
+            <p>Mais do que um fone: um sonho!</p>
         </section>
         <section class="informacoes">
             <h5>Informações</h5>
@@ -141,6 +127,6 @@
         </section>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>    
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
